Fixing the collapse section colours

--- a/assets/css/scss/_customizer-to-main-menu-colours.scss
+++ b/assets/css/scss/_customizer-to-main-menu-colours.scss
@@ -32,7 +32,7 @@
 	}
 
 	.lsx-to-section-title {
-		&.lsx-to-collapse-title {
+		&.lsx-to-collapse-title, &.lsx-to-collapse-title.lsx-title {
 			@media (max-width: 1199px) {
 				background-color: $dropdown-hover;
 				border-bottom-color: $dropdown-hover;
